Bugfix: removed min-height which affected ie9 table row spacing

--- a/src/explorer/css/computer.styl
+++ b/src/explorer/css/computer.styl
@@ -126,7 +126,6 @@
                     width: 100%
                     display: block
                     padding: 0 20px
-                    min-height: 225px
                     overflow-x: scroll
                     tr
                         display:block
